[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsq-utils"
version = "1.0.0"
description = "Utility functions for all projects"
authors = [
    { name = "Ryan Quigley" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "python-dotenv",
    "requests",
    "psutil",
    "pandas",
    "types-psutil",  # For mypy type checking
    "pandas-stubs",  # For mypy type checking
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=rsq_utils"

[project.urls]
"Homepage" = "https://github.com/rsq230798/rsq-utils"
