[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rsq-utils"
version = "1.0.0"
description = "Utility functions for all projects"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "colorama>=0.4.6",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pandas-stubs>=2.2.3.241126",
    "pathlib>=1.0.1",
    "psutil>=7.0.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "pytz>=2025.1",
    "six>=1.17.0",
    "types-psutil>=6.1.0.20241221",
    "types-pytz>=2025.1.0.20250204",
    "typing_extensions>=4.12.2",
    "tzdata>=2025.1"
]

[project.optional-dependencies]
dev = [
    "exceptiongroup>=1.2.2",
    "iniconfig>=2.0.0",
    "mypy>=1.15.0",
    "mypy-extensions>=1.0.0",
    "packaging>=24.2",
    "pluggy>=1.5.0",
    "pytest>=8.3.4",
    "tomli>=2.2.1",
    "types-setuptools>=75.8.0.20250210"
]

[project.urls]
"Homepage" = "https://github.com/rsq230798/rsq-utils"

[tool.hatch.build.targets.wheel]
packages = ["src/rsq_utils"]
